--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <link href="https://fonts.googleapis.com/css?family=Monofett|Montez|Rochester=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fontdiner+Swanky&family=Galada&family=Leckerli+One&family=Modak&family=Oleo+Script:wght@400;700&family=Princess+Sofia&family=Sail&family=Shrikhand&family=Sonsie+One&display=swap" rel="stylesheet">
   <!--
     manifest.json provides metadata used when your web app is installed on a
     user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
